--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
 Flask~=2.0.1
 Werkzeug~=2.0.1
+jupyter~=1.0.0
+scipy~=1.6.0
+matplotlib~=3.3.0
+seaborn~=0.11.1
+numpy~=1.20.3
+opencv-python~=4.5.1.48
+requests~=2.25.1
